# DaisySP-LGPL

./: CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  _poly_pluck_8h_source.html  allpass_8h.html  allpass_8h_source.html  annotated.html  atone_8h_source.html  balance_8h_source.html  biquad_8h_source.html  bitcrush_8h_source.html  blosc_8h_source.html  classdaisysp_1_1_a_tone-members.html  classdaisysp_1_1_a_tone.html  classdaisysp_1_1_allpass-members.html  classdaisysp_1_1_allpass.html  classdaisysp_1_1_balance-members.html  classdaisysp_1_1_balance.html  classdaisysp_1_1_biquad-members.html  classdaisysp_1_1_biquad.html  classdaisysp_1_1_bitcrush-members.html  classdaisysp_1_1_bitcrush.html  classdaisysp_1_1_bl_osc-members.html  classdaisysp_1_1_bl_osc.html  classdaisysp_1_1_comb-members.html  classdaisysp_1_1_comb.html  classdaisysp_1_1_compressor-members.html  classdaisysp_1_1_compressor.html  classdaisysp_1_1_fold-members.html  classdaisysp_1_1_fold.html  classdaisysp_1_1_jitter-members.html  classdaisysp_1_1_jitter.html  classdaisysp_1_1_line-members.html  classdaisysp_1_1_line.html  classdaisysp_1_1_mode-members.html  classdaisysp_1_1_mode.html  classdaisysp_1_1_moog_ladder-members.html  classdaisysp_1_1_moog_ladder.html  (+43 more)
.github/workflows/: build.yml  build_docs.yml  deploy_docs.yml  style.yml
Source/: daicsp.h  daisysp-lgpl.h  daisysp.h
Source/Control/: line.cpp  line.h  phasor.cpp  phasor.h
Source/Dynamics/: balance.cpp  balance.h  compressor.h
Source/Effects/: bitcrush.h  fold.cpp  fold.h  reverbsc.cpp  reverbsc.h
Source/Filters/: allpass.cpp  allpass.h  atone.cpp  atone.h  biquad.cpp  biquad.h  comb.cpp  comb.h  mode.cpp  mode.h  moogladder.cpp  moogladder.h  nlfilt.cpp  nlfilt.h  tone.cpp  tone.h
Source/PhysicalModeling/: PolyPluck.h  pluck.cpp  pluck.h
Source/Spectral/: phasevocoder.cpp  phasevocoder.h  phasevocoderfifo.h  phasevocoderfifo.tcc  phasevocoderfifoimpl.h  shy_fft.h  spectral.cpp  spectral.h  spectralanalyzer.cpp  spectralanalyzer.h  spectralanalyzerfifo.h  spectralanalyzerfifo.tcc  spectralanalyzerfifoimpl.h  spectralblur.cpp  spectralblur.h  spectralblurfifo.h  spectralblurfifo.tcc  spectralblurfifoimpl.h  spectralfreeze.cpp  spectralfreeze.h  spectralfreezefifo.h  spectralfreezefifo.tcc  spectralscale.cpp  spectralscale.h  spectralscale.tcc  spectralshift.cpp  spectralshift.h  spectralsmooth.cpp  spectralsmooth.h  spectralwarp.h
Source/Synthesis/: blosc.h
Source/Utility/: dsp.h  dsy_lgpl_dsp.h  jitter.cpp  jitter.h  port.cpp  port.h
distribution/: gather_lgpl.sh
resources/: Style-Guide.md  preamble.md
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_5.js  classes_6.js  classes_8.js  classes_9.js  files_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  searchdata.js
tests/spectral/: Makefile  README.md  spectral.cpp  spectral.sln
tests/spectral/vs/: spectral-Debug.vgdbsettings  spectral-Release.vgdbsettings  spectral.vcxproj  spectral.vcxproj.filters
util/: fix_style.sh  lut_writer.py  module_gen.py  rebuild_docs.sh
vs/: daicsp-Debug.vgdbsettings  daicsp-Release.vgdbsettings  daicsp.vcxproj  daicsp.vcxproj.filters
